--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
     <!-- Nav Bar -->
     <nav>
       <div class="navbar lg:bg-[#F85559] rounded-full lg:px-5">
-        <div class="navbar-start hidden lg:flex">
-          <ul class="menu menu-horizontal px-1 text-white">
-            <li><a>Home</a></li>
-            <li><a>About Us</a></li>
-            <li><a>Shop</a></li>
-            <li><a>All Fruits</a></li>
-          </ul>
-        </div>
-        <div class="navbar-center">
-          <div class="dropdown">
-            <label tabindex="0" class="btn btn-ghost lg:hidden">
+        <div class="navbar-start">
+          <div class="hidden lg:inline">
+            <ul class="menu menu-horizontal px-1 text-white">
+              <li><a>Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Shop</a></li>
+              <li><a>All Fruits</a></li>
+            </ul>
+          </div>
+
+          <div class="dropdown hidden lg:hidden md:flex">
+            <label tabindex="0" class="btn btn-ghost btn-circle">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-5 w-5"
@@ -62,7 +63,7 @@
             </label>
             <ul
               tabindex="0"
-              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-medium"
+              class="menu dropdown-content mt-3 z-[1] p-2 -m-10 -w-max shadow bg-base-100 rounded-box"
             >
               <li><a>Home</a></li>
               <li><a>About Us</a></li>
@@ -70,7 +71,8 @@
               <li><a>All Fruits</a></li>
             </ul>
           </div>
-          <div class="flex justify-center items-center">
+
+          <div class="flex justify-center items-center md:hidden">
             <img class="h-10" src="images/logo.png" alt="" />
             <a
               class="btn btn-ghost normal-case text-2xl lg:text-white text-black font-bold"
@@ -79,31 +81,62 @@
           </div>
         </div>
 
-        <div class="navbar-end container relative left-0 z-50 flex w-2/4">
-          <div class="relative flex items-center w-full h-full lg:w-64 group">
-            <input
-              type="text"
-              class="block w-full py-1.5 pl-10 pr-4 rounded-2xl bg-gray-100 text-gray-400"
-              placeholder="Search here"
-            />
-            <div
-              class="absolute right-0 hidden h-auto px-2 py-1 mr-2 text-xs text-gray-400 border border-gray-300 rounded-full md:block"
+        <div class="navbar-center md:flex justify-start items-center hidden">
+          <img class="h-10" src="images/logo.png" alt="" />
+          <a
+            class="btn btn-ghost normal-case text-2xl lg:text-white text-black font-bold"
+            >Fruit Brust</a
+          >
+        </div>
+
+        <div class="navbar-end relative pr-2">
+          <input
+            type="text"
+            placeholder="Search here"
+            class="hidden md:inline bg-white rounded-3xl px-3 py-2 pr-5 w-full h-full lg:w-64"
+          />
+          <div class="hidden absolute md:flex items-center pr-3 cursor-pointer">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5 text-black-400"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
             >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+              />
+            </svg>
+          </div>
+          <div class="dropdown md:hidden">
+            <label tabindex="0" class="btn btn-ghost btn-circle">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
                 fill="none"
                 viewBox="0 0 24 24"
-                stroke-width="1.5"
                 stroke="currentColor"
-                class="w-6 h-6"
               >
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
                 />
               </svg>
-            </div>
+            </label>
+            <ul
+              tabindex="0"
+              class="menu dropdown-content mt-3 z-[1] p-2 -m-10 -w-max shadow bg-base-100 rounded-box"
+            >
+              <li><a>Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Shop</a></li>
+              <li><a>All Fruits</a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -327,14 +360,16 @@
             </p>
           </div>
         </div>
-        <div class="flex justify-center">
+        <div class="flex justify-center lg:pt-0 pt-8">
           <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
             <div class="flex flex-col">
               <span
                 class="flex justify-between items-center font-mono text-5xl"
               >
-                <span>23</span>
-                <span><img src="icons/icons8-dots-16.png" alt="" /></span>
+                <span class="pl-4">23</span>
+                <span class="pl-4"
+                  ><img src="icons/icons8-dots-16.png" alt=""
+                /></span>
               </span>
               days
             </div>
@@ -342,8 +377,10 @@
               <span
                 class="flex justify-between items-center font-mono text-5xl"
               >
-                <span>12</span>
-                <span><img src="icons/icons8-dots-16.png" alt="" /></span>
+                <span class="pl-4">12</span>
+                <span class="pl-4"
+                  ><img src="icons/icons8-dots-16.png" alt=""
+                /></span>
               </span>
               hours
             </div>
@@ -351,8 +388,10 @@
               <span
                 class="flex justify-between items-center font-mono text-5xl"
               >
-                <span>44</span>
-                <span><img src="icons/icons8-dots-16.png" alt="" /></span>
+                <span class="pl-4">44</span>
+                <span class="pl-4"
+                  ><img src="icons/icons8-dots-16.png" alt=""
+                /></span>
               </span>
               mins
             </div>
@@ -1381,7 +1420,7 @@
           </div>
         </div>
 
-        <div class="grid grid-cols-1 gap-8 md:grid-cols-3 xl:grid-cols-3">
+        <div class="grid grid-cols-1 gap-8 md:grid-cols-1 xl:grid-cols-3">
           <!-- Left -->
           <div>
             <div
