--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
       >
         <div>
           <div>
-            <h2 class="text-5xl font-extrabold">Deal of the day</h2>
+            <h2 class="text-2xl md:text-3xl lg:text-5xl font-extrabold">
+              Deal of the day
+            </h2>
           </div>
           <div class="pt-7">
             <p>
@@ -1409,7 +1411,9 @@
       <div class="px-6 py-10">
         <div>
           <div class="flex items-center justify-center">
-            <h2 class="text-5xl font-extrabold">Why Choose Us</h2>
+            <h2 class="text-2xl md:text-3xl lg:text-5xl font-extrabold">
+              Why Choose Us
+            </h2>
           </div>
           <div class="py-7 flex items-center justify-center text-center">
             <p>
@@ -1434,7 +1438,7 @@
                 />
               </div>
               <div>
-                <h1 class="text-xl font-semibold text-gray-800">
+                <h1 class="text-xl font-extrabold text-gray-800">
                   Dedicated Team
                 </h1>
                 <div class="flex lg:justify-start justify-center">
@@ -1458,7 +1462,7 @@
                 />
               </div>
               <div>
-                <h1 class="text-xl font-semibold text-gray-800">
+                <h1 class="text-xl font-extrabold text-gray-800">
                   Fresh is Best
                 </h1>
                 <div class="flex lg:justify-start justify-center">
@@ -1482,7 +1486,7 @@
                 />
               </div>
               <div>
-                <h1 class="text-xl font-semibold text-gray-800">
+                <h1 class="text-xl font-extrabold text-gray-800">
                   Gift Certificates
                 </h1>
                 <div class="flex lg:justify-start justify-center">
@@ -1518,7 +1522,7 @@
                 />
               </div>
               <div>
-                <h1 class="text-xl font-semibold text-gray-800">
+                <h1 class="text-xl font-extrabold text-gray-800">
                   Integrated Supplier
                 </h1>
                 <div class="flex lg:justify-end justify-center">
@@ -1542,7 +1546,7 @@
                 />
               </div>
               <div>
-                <h1 class="text-xl font-semibold text-gray-800">
+                <h1 class="text-xl font-extrabold text-gray-800">
                   Sustainable Practice
                 </h1>
                 <div class="flex lg:justify-end justify-center">
@@ -1566,7 +1570,7 @@
                 />
               </div>
               <div>
-                <h1 class="text-xl font-semibold text-gray-800">
+                <h1 class="text-xl font-extrabold text-gray-800">
                   The Benefits Only
                 </h1>
                 <div class="flex lg:justify-end justify-center">
